Fix css word spacing issue - update htaccess file

--- a/src/assets/css/partials/_typography.scss
+++ b/src/assets/css/partials/_typography.scss
@@ -189,7 +189,6 @@ p {
   hyphens: auto;
   line-height: 1.5;
   margin: 0 0 24px;
-  word-spacing: .125em;
 
   &.lead,
   &.lead a {
